# mcp9600_logger

./: README.md
analysis/: plot.py  solder_plot.py
firmware/: Cargo.toml  README.md  openocd.cfg  openocd.gdb
firmware/.zed/: settings.json
firmware/src/: clock.rs  display.rs  display_buffer.rs  lib.rs  main.rs  mcp9600.rs  util.rs
