[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]
