[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = { features = [], version = "1.0.0" }
nb = "1.0.0"

cortex-m-rt = "0.7.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

#usb-device = "0.3.2"
#usbd-serial = "0.2.2"
usb-device = "0.2.8"
usbd-serial = "0.1.1"

[dependencies.cortex-m]
version = "0.7.7"
#features = ["cm7-r0p1"]

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
opt-level = "s"
debug = true
lto = true
